terraform/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_ecr_repository" "app_repo" {
  name = "airline-app"
}

resource "aws_security_group" "web_sg" {
  name        = "airline-web-sg"
  description = "Allow SSH, HTTP, HTTPS only from my IP"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["180.64.226.122/32"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["180.64.226.122/32"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["180.64.226.122/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "web" {
  ami                         = "ami-0c9c942bd7bf113a2" # Ubuntu 22.04 LTS in Seoul
  instance_type               = "t2.micro"
  vpc_security_group_ids      = [aws_security_group.web_sg.id]
  associate_public_ip_address = true
  key_name                    = var.key_pair_name

  tags = {
    Name = "airline-demo-instance"
  }
}
